<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:id="@+id/viewContainer"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/ivLogoPotter"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/harry_potter_logo"
        style="@style/app_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintVertical_bias="0.6"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play"
            android:text="@string/play"
            style="@style/main_activity_buttons" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ranking"
            android:text="@string/ranking"
            style="@style/main_activity_buttons"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_information"
            android:text="@string/information"
            style="@style/main_activity_buttons" />
    </LinearLayout>

    <TextView
        android:text="@string/davidthar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/davidthar" />


</androidx.constraintlayout.widget.ConstraintLayout>