<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.RankingActivity">

    <ImageView
        android:id="@+id/ivLogoPotter"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/app_logo" />


    <ScrollView
        android:id="@+id/scrollRankings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/ivLogoPotter"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/linearNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="15dp"
                android:gravity="end">
                <TextView
                    android:text="@string/_1"
                    style="@style/ranking_number" />
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_2"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_3"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_4"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_5"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_6"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_7"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_8"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_9"/>
                <TextView
                    style="@style/ranking_number"
                    android:text="@string/_10"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="15dp"
                android:gravity="start">
                <TextView
                    android:id="@+id/tvRankingName1"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName2"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName3"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName4"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName5"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName6"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName7"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName8"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName9"
                    style="@style/ranking_names" />
                <TextView
                    android:id="@+id/tvRankingName10"
                    style="@style/ranking_names" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end">
                <TextView
                    android:id="@+id/tvRankingPoints1"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints2"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints3"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints4"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints5"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints6"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints7"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints8"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints9"
                    style="@style/ranking_points" />
                <TextView
                    android:id="@+id/tvRankingPoints10"
                    style="@style/ranking_points" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/relojes"
        app:layout_constraintTop_toBottomOf="@id/scrollRankings"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/button_back"/>

</androidx.constraintlayout.widget.ConstraintLayout>