<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".view.InfoActivity">

    <ImageView
        android:id="@+id/ivLogoPotter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/harry_potter_logo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <LinearLayout
        android:id="@+id/linearSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogoPotter"
        app:layout_constraintBottom_toTopOf="@id/tvInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_github"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/github_icon"
            app:tint="@color/text_color_darker"
            android:contentDescription="@string/github_logo" />
        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/twitter_icon"
            app:tint="@color/text_color_darker"
            android:contentDescription="@string/twitter_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearSocial"
        app:layout_constraintBottom_toTopOf="@+id/moureGit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/text_color_darker"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/app_info" />

    <ImageView
        android:id="@+id/moureGit"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/mouregit"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/github_mouredev" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/button_back"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>